--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ img{
 
 #block8 {
 	font-family: 'Raleway', sans-serif;
-	background-color:#FFF8DC;
+	background-color:#FFF;
 	overflow:hidden;
 	box-shadow:inset 0 0 20px #A0A0A0;
 }
