--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ a:hover {cursor:pointer;}
 }
 #select_lang {
 	border-radius:5px;
-	color:#739AE8;
+	color:#DC143C;
 }
 
 /* --------------------------- block1 ------------------------------*/
